--- a/trading_bot/config/config.json
+++ b/trading_bot/config/config.json
@@ -15,11 +15,12 @@
         "initial_capital": 200,
         "trading_fee": 0.001,
         "risk_management": {
-            "stop_loss": 0.02,
-            "take_profit": 0.05
+            "stop_loss": 0.03890600202608715,
+            "take_profit": 0.05,
+            "max_risk_per_trade": 0.015394333544073008
         },
-        "buy_threshold": 0.546398788362281,
-        "sell_threshold": -0.42676477084501296
+        "buy_threshold": 0.05380332515225272,
+        "sell_threshold": -0.055691531246739256
     },
     "signal_weights": {
         "rsi": 0.1116167224336399,
@@ -37,5 +38,9 @@
         "start_str": "180 days ago UTC",
         "end_str": null,
         "max_evals": 50
+    },
+    "risk_management": {
+        "max_risk_per_trade": 0.01,
+        "stop_loss": 0.02
     }
 }
